# Stub configuration template for Monotone third-party library directories.
# Process this file with autoconf to produce a configure script.
# Copyright 2008 Zachary Weinberg  <zackw@panix.com>
#
# This program is made available under the GNU GPL version 2.0 or
# greater. See the accompanying file COPYING for details.
#
# This program is distributed WITHOUT ANY WARRANTY; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
# PURPOSE.

# This file will be replaced by the actual third-party library
# configuration script for all directories where that is practical.
# (It may not be practical for dead-upstream or heavily modified
# third-party libraries, e.g. netxx and idna.)  It makes no attempt to
# do anything beyond the bare minimum, just like the associated
# Makefile.am.

AC_PREREQ(2.58)
AC_INIT(lua, XX, monotone-devel@nongnu.org)
AC_CONFIG_AUX_DIR([..])
AC_CONFIG_MACRO_DIR([../m4])

AM_INIT_AUTOMAKE([1.7.1 foreign no-dist no-define])
AC_CONFIG_SRCDIR([lua.h])
AC_CONFIG_FILES([Makefile])

AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_OUTPUT
